@@ -42,7 +42,7 @@ AT_SETUP([Reading an LGL file (igraph_read_graph_lgl):])
 AT_KEYWORDS([igraph_read_graph_lgl LGL foreign])
 AT_COMPILE_CHECK([simple/igraph_read_graph_lgl.c],
 		 [simple/igraph_read_graph_lgl.out],
-		 [{simple/igraph_read_graph_lgl-1.lgl,simple/igraph_read_graph_lgl-2.lgl}])
+		 [{simple/igraph_read_graph_lgl-1.lgl,simple/igraph_read_graph_lgl-2.lgl,simple/igraph_read_graph_lgl-3.lgl}])
 AT_CLEANUP
 
 AT_SETUP([Writing LGL (igraph_write_graph_lgl):])
